<resources>
    <string name="app_name">Build UI with Layout Editor 2</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="jobtitle">Jobtitle</string>
    <string name="employee_information">Emp info here..</string>
      <string name="basic_text">is so coooooooool</string>

</resources>
