<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="398dp"
            android:layout_height="521dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:gravity="center">
            <ImageView
                    android:layout_width="407dp"
                    android:layout_height="match_parent" app:srcCompat="@drawable/employee1" android:id="@+id/imageView"
                    android:layout_weight="1"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="385dp"
                    android:layout_height="221dp" android:layout_weight="1" android:gravity="center">
                <TextView
                        android:text="@string/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" android:id="@+id/firstnameTextView"/>
                <TextView
                        android:text="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" android:id="@+id/lastnameTextView"/>
                <TextView
                        android:text="@string/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" android:id="@+id/jobtitleTextView"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/employee_information"
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/employeeInfoTextView"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="401dp"
            android:layout_height="39dp" tools:layout_editor_absoluteX="8dp"
            android:id="@+id/linearLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <TextView
                android:onClick="numberClicked"
                android:text="@string/_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/oneTextView" android:layout_weight="1"
                android:gravity="center"/>
        <TextView
                android:onClick="numberClicked"
                android:text="@string/_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/twoTextView" android:layout_weight="1"
                android:gravity="center"/>
        <TextView
                android:onClick="numberClicked"
                android:text="@string/_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/threeTextView" android:layout_weight="1"
                android:gravity="center"/>
        <TextView
                android:onClick="numberClicked"
                android:text="@string/_4"
                android:id="@+id/fourTextView" android:layout_weight="1" android:layout_height="match_parent"
                android:layout_width="wrap_content" android:gravity="center"/>
        <TextView
                android:onClick="numberClicked"
                android:text="@string/_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/fiveTextView" android:layout_weight="1"
                android:gravity="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>